--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -5,3 +5,9 @@ linter:
     - prefer_single_quotes
     - prefer_relative_imports
     - require_trailing_commas
+
+analyzer:
+  exclude:
+    - '**.g.dart'
+    - '**.gr.dart'
+    - '**.config.dart'
