--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,23 @@ dependencies:
   flutter:
     sdk: flutter
   equatable: ^2.0.5
+  uuid: ^4.5.1
+  faker: ^2.2.0
+  auto_route: ^9.2.2
+  injectable: ^2.5.0
+  get_it: ^8.0.1
+  mobx: ^2.3.3+2
+  flutter_mobx: ^2.2.1+1
+  math_expressions: ^2.6.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  auto_route_generator: ^9.0.0
+  build_runner: ^2.4.13
+  injectable_generator: ^2.6.2
+  mobx_codegen: ^2.6.1
 
 flutter:
   uses-material-design: true
