--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   mobx: ^2.3.3+2
   flutter_mobx: ^2.2.1+1
   math_expressions: ^2.6.0
+  firebase_core: ^3.6.0
+  cloud_firestore: ^5.4.4
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
@@ -27,6 +30,7 @@ dev_dependencies:
   build_runner: ^2.4.13
   injectable_generator: ^2.6.2
   mobx_codegen: ^2.6.1
+  json_serializable: ^6.8.0
 
 flutter:
   uses-material-design: true
