--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   firebase_core: ^3.6.0
   cloud_firestore: ^5.4.4
   json_annotation: ^4.9.0
+  firebase_auth: ^5.3.1
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
